<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/userImage"
        android:layout_gravity="center"
        android:layout_width="118dp"
        android:layout_height="77dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/blacktrans2x" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_string"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/custom_edittext"
        android:text="@string/username_string2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_string"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textPassword"
        android:text="@string/password_string2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:background="@drawable/loginshapebutton"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rights"
        android:gravity="center"
        />
</LinearLayout>